# wechatManager

./: .gitignore  LICENSE  README.md  token-benchmark.html
wx-mcp/: .gitignore  @AutomationLog.txt  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
wx-mcp/.github/workflows/: test.yml
wx-mcp/docs/: README.md  architecture.md  decryption-pipeline.md  mcp-integration.md  project-structure.md  sender-mechanism.md  wechat-ui-tree.md
wx-mcp/src/wx_mcp/: __init__.py  __main__.py  crypto.py  decrypt.py  key.py  reader.py  sender.py  server.py  utils.py
wx-mcp/tests/: __init__.py  test_crypto.py  test_decrypt.py  test_key.py  test_reader.py  test_sender.py  test_server.py  test_utils.py
